--- a/register.html
+++ b/register.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/header.css" />
   </head>
   <body>
-    <header class="header" style="background: #21c08b;">
+    <header class="header">
       <img class="header__img" src="img/logo-platzi-video-BW2.png" alt="" />
     </header>
     <section class="login">
