--- a/index.html
+++ b/index.html
@@ -4,74 +4,37 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/login.css" />
+    <link rel="stylesheet" href="css/header.css" />
   </head>
   <body>
-    <header class="header">
+    <header class="header" >
       <img class="header__img" src="img/logo-platzi-video-BW2.png" alt="" />
-      <div class="header__menu">
-        <div class="header__menu--profile">
-          <img src="img/user-icon.png" alt="" />
-          <p>Perfil</p>
-        </div>
-        <ul>
-          <li><a href="">Cuenta</a></li>
-          <li><a href="">Cerrar Secion</a></li>
-        </ul>
-      </div>
     </header>
-    <section class="main">
-      <h2 class="main__title">Que quieres ver hoy?</h2>
-      <input type="text" class="input" placeholder="Buscar..." />
+    <section class="login">
+      <section class="login__container">
+        <h2>Iniciar sesion</h2>
+        <form action="" class="login__container--form">
+          <input type="text" class="input" placeholder="Correo" />
+          <input type="password" class="input" placeholder="Contrasena" />
+          <button class="button"  a> <a href="home.html">Iniciar sesion</a>  </button>
+          <div class="login__container--remember-me ">
+              <label for="" ><input type="checkbox" name="" id="cbx1"> Recuerdame</label>
+              <a href="">Olvide mi Contrasena</a>
+
+          </div>
+        </form>
+        <section class="login__container--social-media">
+            <div><img src="img/icons8-google-plus-50.png" alt="">Inicia sesión con Google</div>
+            <div><img src="img/icons8-twitter-50.png" alt="">Inicia sesión con Twitter</div>
+        </section>
+        <p class="login__container--register">No tienes ninguna cuenta <a href=""> Registrate</a> </p>
+      </section>
     </section>
-    <section class="carousel">
-      <div class="carousel__container">
-        <div class="carousel-item">
-          <img class="carousel-item__img" src="img/brisa.jpeg" alt="" />
-          <div class="carousel-item__details">
-            <div>
-              <img src="img/icons8-play-64.png" alt="" />
-              <img src="img/icons8-plus-64.png" alt="" />
-            </div>
-            <p class="carousel-item__details--title">Titulo descriptivo</p>
-            <p class="carousel-item__details--subtitle">2019 16+ 114 min</p>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <img class="carousel-item__img" src="img/brisa.jpeg" alt="" />
-          <div class="carousel-item__details">
-            <div>
-              <img src="img/icons8-play-64.png" alt="" />
-              <img src="img/icons8-plus-64.png" alt="" />
-            </div>
-            <p class="carousel-item__details--title">Titulo descriptivo</p>
-            <p class="carousel-item__details--subtitle">2019 16+ 114 min</p>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <img class="carousel-item__img" src="img/brisa.jpeg" alt="" />
-          <div class="carousel-item__details">
-            <div>
-              <img src="img/icons8-play-64.png" alt="" />
-              <img src="img/icons8-plus-64.png" alt="" />
-            </div>
-            <p class="carousel-item__details--title">Titulo descriptivo</p>
-            <p class="carousel-item__details--subtitle">2019 16+ 114 min</p>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <img class="carousel-item__img" src="img/brisa.jpeg" alt="" />
-          <div class="carousel-item__details">
-            <div>
-              <img src="img/icons8-play-64.png" alt="" />
-              <img src="img/icons8-plus-64.png" alt="" />
-            </div>
-            <p class="carousel-item__details--title">Titulo descriptivo</p>
-            <p class="carousel-item__details--subtitle">2019 16+ 114 min</p>
-          </div>
-        </div>
-      </div>
-    </section>
+    <footer class="footer">
+        <a href="">Terminos de uso</a>
+        <a href="">Declaracion de privaciadad </a>
+        <a href="">Centro de ayuda</a>
+    </footer>
   </body>
 </html>
